--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <div id="more">
                         <button id="get-started-button">Get Started</button>
                         <div id="learn-more">
-                            <h4><a href="#">Learn More (👉ﾟヮﾟ)👉</a></h4>
+                            <h4><a href="#">Learn More</a></h4>
                         </div>
                     </div>
                 </div>
