--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <div class="heading-text"><h1>Discover<br> Digital Art and Collect NFTs.</h1></div>
                     <div id="subHeading-text"><h5>EnDasmu is a shared liquidity NFT market smart contract which is used by multiple website to provide the userd the best possible experience.</h5></div>
                     <div id="more">
-                        <h5 id="get-started-button">Get Started</h5>
+                        <button id="get-started-button">Get Started</button>
                         <div id="learn-more">
                             <h4><a href="#">Learn More</a></h4>
                         </div>
