--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div id="center">
                 <div id="page1-left">
                     <div class="heading-text"><h1>Discover<br> Digital Art and Collect NFTs.</h1></div>
-                    <div id="subHeading-text"><h5>EnDasmu is a shared liquidity NFT market smart contract which is used by multiple website to provide the userd the best possible experience.</h5></div>
+                    <div id="subHeading-text"><h5>EnDasmu is a shared liquidity NFT market smart contract which is used by multiple website to <br> provide the userd the best possible <br> experience.</h5></div>
                     <div id="more">
                         <button id="get-started-button">Get Started</button>
                         <div id="learn-more">
