--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
                         <h2>3.4 ETH</h2>
                     </div>
                     <div id="info-right-bottom">
-                        <img src="./pfp.png">
+                        <!-- <img src="./pfp.png">
                         <img  id="img2" src="./pfp.png">
                         <img id="img3" src="./pfp.png">
-                        <img id="img4" src="./pfp.png">
+                        <img id="img4" src="./pfp.png"> -->
                     </div>
                 </div>
             </div>
