page1-bottom updated

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <!-- IBM Plex Sans -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500&display=swap" rel="stylesheet"></head>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500&display=swap" rel="stylesheet">
+</head>
 <body>
     <div id="main">
         <!-- Page 1 -->
@@ -86,7 +87,7 @@
         <!-- Accounts -->
         <div id="accounts"></div>
         <!-- Page 4 -->
-        <div id="page4">
+        <footer id="page4">
             <div id="page4-top">
                 <div class="heading-text"></div>
                 <div id="sub-button"></div>
@@ -98,7 +99,7 @@
                 <div id="resource"></div>
                 <div id="company"></div>
             </div>
-        </div>
+        </footer>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
