--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 </head>
 <body>
     <div id="main">
+        <video id="video-background" autoplay loop muted>
+            <source src="https://player.vimeo.com/progressive_redirect/playback/887528174/rendition/360p/file.mp4?loc=external&oauth2_token_id=1747418641&signature=0e77b4b589b28c36e98af1cd42ba576fc911f427c3e73316d45c3cfd5c4a7e34" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
         <!-- Page 1 -->
         <div id="page1">
             <!-- Navigation Bar -->
