added page 2 html

--- a/index.html
+++ b/index.html
@@ -80,8 +80,18 @@
         </div>
         <!-- Page 2 -->
         <div id="page2">
-            <div id="page2-left"></div>
-            <div id="page2-right"></div>
+            <div id="page2-left">
+                <img src="./pfp.png">
+                <img  id="img2" src="./pfp.png">
+                <img id="img3" src="./pfp.png">
+                <img id="img4" src="./pfp.png">
+            </div>
+            <div id="page2-right">
+                <h6>Popular Item</h6>
+                <h2>Hot Trending On This Week.</h2>
+                <h5>Various types of NFTs that are trending the trend will be reset every week. Don't miss out on the best NFTs every week.</h5>
+                <h4>See all</h4>
+            </div>
         </div>
         <!-- Page 3 -->
         <div id="page3">
