--- a/index.html
+++ b/index.html
@@ -99,21 +99,29 @@
             <div id="page3-right"></div>
         </div>
         <!-- Accounts -->
-        <div id="accounts"></div>
+        <div id="accounts">
+            <h1>Company 1</h1>
+            <h1>Company 2</h1>
+            <h1>Company 3</h1>
+            <h1>Company 4</h1>
+            <h1>Company 5</h1>
+        </div>
         <!-- Page 4 -->
-        <footer id="page4">
+        <div id="page4">
             <div id="page4-top">
-                <div class="heading-text"></div>
+                <div class="heading-text">
+                    <h1>Subscribe to Get Fresh News Update About NFTs.</h1>
+                </div>
                 <div id="sub-button"></div>
             </div>
-            <div id="page4-bottom">
+            <footer id="page4-bottom">
                 <div id="self-intro"></div>
                 <div id="explore"></div>
                 <div id="statistics"></div>
                 <div id="resource"></div>
                 <div id="company"></div>
-            </div>
-        </footer>
+            </footer>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
     <script src="script.js"></script>
